Syntactic refactoring